--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TikTakToe</title>
+        <title>Tic Tac Toe</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- load bootstrap for nicer ui -->
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
@@ -11,5 +11,12 @@
         <div class="container">
             <h1>Tic Tac Toe</h1>
         </div>
+	<div class="theGame">
+		<button type="button"
+			onclick="document.getElementById('demo').innerHTML = Date()">
+			Click me to display Date and Time.</button>
+
+			<p id="demo"></p>
+	</div>
     </body>
 </html>
