--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -12,17 +12,17 @@
         	<tr>
 			    <td>
 			    	<form method="post" action="/playTurn" class="form-inline" role="form">
-                		<input type="submit" value="1">
+                		<input type="submit" value="1" class="kalliBobo">
                 	</form>
                 </td>
 			    <td>
 			    	<form method="post" action="/playTurn" class="form-inline" role="form">
-                		<input type="submit" value="2"><br>
+                		<input type="submit" value="2" class="kalliBobo"><br>
                 	</form>
                 </td>
                 <td>
-			    	<form method="post" action="/playTurn" class="form-inline" role="form">
-                		<input type="submit" value="3">
+			    	<form method="post" action="/playTurn" class="form-inline " role="form">
+                		<input type="submit" value="3" class="kalliBobo">
                 	</form>
                 </td>
 			</tr>
@@ -79,7 +79,7 @@
         $(document).ready(function() {
             var form = $('form');
             form.submit(function( event ) {
-                var form = $("#number").val();
+                var form = $(".kalliBobo").val();
                 $.ajax({
                     type: form.attr('method'),
                     url: form.attr('action'),
