--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,35 +11,35 @@
         <table>
         	<tr>
 			    <td>
-                	<input type="submit" value="1" onclick="playTurn(1)">
+                	<button value="1" onclick="playTurn(1)">
                 </td>
 			    <td>
-                	<input type="submit" value="2" onclick="playTurn(2)">
+                	<button value="2" onclick="playTurn(2)">
                 </td>
                 <td>
-                	<input type="submit" value="3" onclick="playTurn(3)">
+                	<button value="3" onclick="playTurn(3)">
                 </td>
 			</tr>
         	<tr>
 			    <td>
-                	<input type="submit" value="4" onclick="playTurn(4)">
+                	<button value="4" onclick="playTurn(4)">
                 </td>
 			    <td>
-                	<input type="submit" value="5" onclick="playTurn(5)">
+                	<button value="5" onclick="playTurn(5)">
                 </td>
                 <td>
-                	<input type="submit" value="6" onclick="playTurn(6)">
+                	<button value="6" onclick="playTurn(6)">
                 </td>
 			</tr>
         	<tr>
 			    <td>
-                	<input type="submit" value="7" onclick="playTurn(7)">
+                	<button value="7" onclick="playTurn(7)">
                 </td>
 			    <td>
-                	<input type="submit" value="8" onclick="playTurn(8)">
+                	<button value="8" onclick="playTurn(8)">
                 </td>
                 <td>
-                	<input type="submit" value="9" onclick="playTurn(9)">
+                	<button value="9" onclick="playTurn(9)">
                 </td>
 			</tr>			
         </table>
