--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,35 +11,35 @@
         <table>
         	<tr>
 			    <td>
-                	<button value="1" onclick="playTurn(1)">1</button>
+                	<button value="1" onclick="playTurn(this)">1</button>
                 </td>
 			    <td>
-                	<button value="2" onclick="playTurn(2)">2</button>
+                	<button value="2" onclick="playTurn(this)">2</button>
                 </td>
                 <td>
-                	<button value="3" onclick="playTurn(3)">3</button>
+                	<button value="3" onclick="playTurn(this)">3</button>
                 </td>
 			</tr>
         	<tr>
 			    <td>
-                	<button value="4" onclick="playTurn(4)">4</button>
+                	<button value="4" onclick="playTurn(this)">4</button>
                 </td>
 			    <td>
-                	<button value="5" onclick="playTurn(5)">5</button>
+                	<button value="5" onclick="playTurn(this)">5</button>
                 </td>
                 <td>
-                	<button value="6" onclick="playTurn(6)">6</button>
+                	<button value="6" onclick="playTurn(this)">6</button>
                 </td>
 			</tr>
         	<tr>
 			    <td>
-                	<button value="7" onclick="playTurn(7)">7</button>
+                	<button value="7" onclick="playTurn(this)">7</button>
                 </td>
 			    <td>
-                	<button value="8" onclick="playTurn(8)">8</button>
+                	<button value="8" onclick="playTurn(this)">8</button>
                 </td>
                 <td>
-                	<button value="9" onclick="playTurn(9)">9</button>
+                	<button value="9" onclick="playTurn(this)">9</button>
                 </td>
 			</tr>			
         </table>
@@ -57,7 +57,7 @@
         <script>
         $(document).ready(function() {
             function playTurn(a) {
-                    alert(a);
+                    alert(a.value);
                 }
             }
         });
