--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -57,6 +57,7 @@
         <script>
         $(document).ready(function() {
             function playTurn(a) {
+                    alert("Vid erum sexy");
                     alert(a.value);
                 }
             }
