--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,7 +39,7 @@
                 	<button value="8" onclick="playTurn(this)">8</button>
                 </td>
                 <td>
-                	<button value="9" onclick="playTurn(this)">9</button>
+                	<button value="9" onclick="kalliBobo()">9</button>
                 </td>
 			</tr>			
         </table>
@@ -55,12 +55,13 @@
 
         <!-- Use ajax to submit form, retrive joke and display on page -->
         <script>
-        $(document).ready(function() {
             function playTurn(a) {
                     alert("Vid erum sexy");
                     alert(a.value);
                 }
-            });
+            function kalliBobo() {
+                alert("yeahhhh");
+            }
         </script>
     </body>
 </html>
