--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,7 +39,7 @@
                 	<button value="8" onclick="playTurn(this)">8</button>
                 </td>
                 <td>
-                	<button value="9" onclick="kalliBobo()">9</button>
+                	<button value="9" onclick="playTurn(this)">9</button>
                 </td>
 			</tr>			
         </table>
@@ -55,13 +55,12 @@
 
         <!-- Use ajax to submit form, retrive joke and display on page -->
         <script>
-            function playTurn(a) {
-                    alert("Vid erum sexy");
-                    alert(a.value);
-                }
-            function kalliBobo() {
-                alert("yeahhhh");
-            }
+            $( document ).ready(
+                function playTurn(a) {
+                        alert("Vid erum sexy");
+                        alert(a.value);
+                    }
+            });
         </script>
     </body>
 </html>
