--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -55,11 +55,14 @@
 
         <!-- Use ajax to submit form, retrive joke and display on page -->
         <script>
-            $( document ).ready(
+            $( document ).ready(function(){
+                console.log("Vid erum ready");
+                
                 function playTurn(a) {
                         alert("Vid erum sexy");
                         alert(a.value);
-                    });
+                    }
+            });
         </script>
     </body>
 </html>
