--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -58,7 +58,7 @@
                         url: "/playTurn",
                         data: 'playTurn=' + a.value
                     }).done(function(result){
-                        alert(result.value);
+                        alert(result);
                     })
 
 //                        alert(a.value);
