--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -63,7 +63,7 @@
                             console.log(result);
                         }
                         else{
-                            var tmpArr = tmpStr.split(" ")
+                            var tmpArr = tmpStr.split(" ");
                             console.log(tmpArr);
                         }
                     })
