--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,36 +10,45 @@
         </div>
         <table>
         	<tr>
-			    <td id="1">
-                	<button value="1" onclick="playTurn(this)">1</button>
+			    <td>
+                	<button id="h1" value="1" onclick="playTurn(this)">1</button>
+                    <div id="s1"></div>
                 </td>
-			    <td id="2">
-                	<button value="2" onclick="playTurn(this)">2</button>
+			    <td>
+                	<button id="h2" value="2" onclick="playTurn(this)">2</button>
+                    <div id="s2"></div>
                 </td>
-                <td id="3">
-                	<button value="3" onclick="playTurn(this)">3</button>
-                </td>
-			</tr>
-        	<tr>
-			    <td id="4">
-                	<button value="4" onclick="playTurn(this)">4</button>
-                </td>
-			    <td id="5">
-                	<button value="5" onclick="playTurn(this)">5</button>
-                </td>
-                <td id="6">
-                	<button value="6" onclick="playTurn(this)">6</button>
+                <td>
+                	<button id="h3" value="3" onclick="playTurn(this)">3</button>
+                    <div id="s3"></div>
                 </td>
 			</tr>
         	<tr>
-			    <td id="7">
-                	<button value="7" onclick="playTurn(this)">7</button>
+			    <td>
+                	<button id="h4" value="4" onclick="playTurn(this)">4</button>
+                    <div id="s4"></div>
                 </td>
-			    <td id="8">
-                	<button value="8" onclick="playTurn(this)">8</button>
+			    <td>
+                	<button id="h5" value="5" onclick="playTurn(this)">5</button>
+                    <div id="s5"></div>
                 </td>
-                <td id="9">
-                	<button value="9" onclick="playTurn(this)">9</button>
+                <td>
+                	<button id="h6" value="6" onclick="playTurn(this)">6</button>
+                    <div id="s6"></div>
+                </td>
+			</tr>
+        	<tr>
+			    <td>
+                	<button id="h7" value="7" onclick="playTurn(this)">7</button>
+                    <div id="s7"></div>
+                </td>
+			    <td>
+                	<button id="h8" value="8" onclick="playTurn(this)">8</button>
+                    <div id="s8"></div>
+                </td>
+                <td>
+                	<button id="h9" value="9" onclick="playTurn(this)">9</button>
+                    <div id="s9"></div>
                 </td>
 			</tr>			
         </table>
@@ -64,7 +73,26 @@
                         }
                         else{
                             var tmpArr = tmpStr.split(" ");
-                            console.log(tmpArr);
+                            //console.log(tmpArr);
+                            for(var i = 0; i < tmpArr.length; i++){
+                                if(tmpArr[i] == 'X'){
+                                    $("d" + (i+1)).click(function(){
+                                        $("h" + (i + 1)).hide();
+                                        $("s" + (i + 1)).innerHTML = tmpArr[i];
+                                        $("s" + (i + 1)).show();
+                                    })
+                                }
+                                else if(tmpArr[i] == 'O'){
+                                    $("d" + (i+1)).click(function(){
+                                        $("h" + (i + 1)).hide();
+                                        $("s" + (i + 1)).innerHTML = tmpArr[i];
+                                        $("s" + (i + 1)).show();
+                                    })
+                                }
+                                else{
+                                    console.log("Fatal error!");
+                                }
+                            }
                         }
                     })
                 }
