--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -75,14 +75,14 @@
                             var tmpArr = tmpStr.split(" ");
                             //console.log(tmpArr);
                             for(var i = 0; i < tmpArr.length; i++){
-                                if(tmpArr[i] == 'X'){
+                                if(tmpArr[i] == 'x'){
                                     $("d" + (i+1)).click(function(){
                                         $("h" + (i + 1)).hide();
                                         $("s" + (i + 1)).innerHTML = tmpArr[i];
                                         $("s" + (i + 1)).show();
                                     })
                                 }
-                                else if(tmpArr[i] == 'O'){
+                                else if(tmpArr[i] == 'o'){
                                     $("d" + (i+1)).click(function(){
                                         $("h" + (i + 1)).hide();
                                         $("s" + (i + 1)).innerHTML = tmpArr[i];
