--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -73,7 +73,7 @@
                         }
                         else{
                             var tmpArr = tmpStr.split(" ");
-                            //console.log(tmpArr);
+                            console.log(tmpArr[2]);
                             for(var i = 0; i < tmpArr.length; i++){
                                 if(tmpArr[i] == 'x'){
                                     $("d" + (i+1)).click(function(){
