--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -77,17 +77,17 @@
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
                                 if(tmpArr[i] == "X"){
-                                    $("d" + (i+1)).click(function(){
-                                        $("h" + (i + 1)).hide();
-                                        $("s" + (i + 1)).innerHTML = tmpArr[i];
-                                        $("s" + (i + 1)).show();
+                                    $("d1").click(function(){
+                                        $("h1").hide();
+                                        $("s1").innerHTML = tmpArr[i];
+                                        $("s1").show();
                                     })
                                 }
                                 else if(tmpArr[i] == "O"){
-                                    $("d" + (i+1)).click(function(){
-                                        $("h" + (i + 1)).hide();
-                                        $("s" + (i + 1)).innerHTML = tmpArr[i];
-                                        $("s" + (i + 1)).show();
+                                    $("d1").click(function(){
+                                        $("h1").hide();
+                                        $("s1").innerHTML = tmpArr[i];
+                                        $("s1").show();
                                     })
                                 }
                                 else{
