--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -77,18 +77,16 @@
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
                                 if(tmpArr[i] == "X"){
-                                    $("#d1").click(function(){
                                         $("#h1").hide();
-                                        $("#s1").innerHTML = tmpArr[i];
+                                        document.getElementById("h1")innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    })
+                                    }
                                 }
                                 else if(tmpArr[i] == "O"){
-                                    $("#d1").click(function(){
                                         $("#h1").hide();
                                         $("#s1").innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    })
+                                    }
                                 }
                                 else{
                                     console.log("Fatal error!");
