--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -78,13 +78,13 @@
                                 //console.log(tmpArr[i]);
                                 if(tmpArr[i] == "X"){
                                         $("#h1").hide();
-                                        document.getElementById("#h1")innerHTML = tmpArr[i];
+                                        document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
                                     }
                                 }
                                 else if(tmpArr[i] == "O"){
                                         $("#h1").hide();
-                                        document.getElementById("#h1")innerHTML = tmpArr[i];
+                                        document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
                                     }
                                 }
