--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -76,17 +76,19 @@
                             console.log(tmpArr);
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
-                                if(tmpArr[i] == "X"){
+                                if(tmpArr[i] == "X"){function(){
                                         $("#h1").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
                                     }
                                 }
-                                else if(tmpArr[i] == "O"){
+                                }
+                                else if(tmpArr[i] == "O"){function(){
                                         $("#h1").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
                                     }
+                                }
                                 }
                                 else{
                                     console.log("Fatal error!");
