--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -76,19 +76,24 @@
                             console.log(tmpArr);
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
+                                console.log(tmpArr[i]);
                                 if(tmpArr[i] === "X"){
-                                    (function(){
+                                    console.log("This is X");
+
+                                    /*(function(){
                                         $("#h1").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    });
+                                    });*/
                                 }
+                                console.log(tmpArr[i]);
                                 else if(tmpArr[i] === "O"){
-                                    (function(){
+                                    console.log("This is motherfucking O");
+                                    /*(function(){
                                         $("#h1").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    });
+                                    });*/
                                 }
                                 else{
                                     console.log("Fatal error!");
