--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -76,7 +76,7 @@
                             console.log(tmpArr);
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
-                                console.log(tmpArr[i]);
+                                //console.log(tmpArr[i]);
                                 if(String(tmpArr[i]) === "X"){
                                     console.log("This is X");
                                         (function(){
@@ -85,7 +85,7 @@
                                         $("#s1").show();
                                     });
                                 }
-                                console.log(tmpArr[i]);
+                                //console.log(tmpArr[i]);
                                 else if(String(tmpArr[i]) === "O"){
                                     console.log("This is motherfucking O");
                                     (function(){
