--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -77,7 +77,7 @@
                             for(var i = 0; i < tmpArr.length; i++){
                                 //console.log(tmpArr[i]);
                                 //console.log(tmpArr[i]);
-                                if(String(tmpArr[i]) === "X"){
+                                if(String(tmpArr[i]) == "X"){
                                     console.log("This is X");
                                         (function(){
                                         $("#h1").hide();
@@ -86,7 +86,7 @@
                                     });
                                 }
                                 //console.log(tmpArr[i]);
-                                else if(String(tmpArr[i]) === "O"){
+                                else if(String(tmpArr[i]) == "O"){
                                     console.log("This is motherfucking O");
                                     (function(){
                                         $("#h1").hide();
