--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -78,21 +78,17 @@
                                 //console.log(tmpArr[i]);
                                 //console.log(tmpArr[i]);
                                 if(String(tmpArr[i]) == "X"){
-                                    console.log("This is X");
-                                        (function(){
-                                        $("#h1").hide();
+                                    console.log("This is X");{
+                                        $("#winner").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    });
                                 }
                                 //console.log(tmpArr[i]);
                                 else if(String(tmpArr[i]) == "O"){
                                     console.log("This is motherfucking O");
-                                    (function(){
-                                        $("#h1").hide();
+                                        $("#winner").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
-                                    });
                                 }
                                 else{
                                     console.log("Fatal error!");
