--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -78,7 +78,7 @@
                                 //console.log(tmpArr[i]);
                                 //console.log(tmpArr[i]);
                                 if(String(tmpArr[i]) == "X"){
-                                    console.log("This is X");{
+                                    console.log("This is X");
                                         $("#winner").hide();
                                         document.getElementById("h1").innerHTML = tmpArr[i];
                                         $("#s1").show();
